# autoclicker

./: LICENSE  README.md  autoclicker.py  pyproject.toml
.github/workflows/: release.yml
