[project]
name = "autoclicker"
version = "0.2.0"
description = "A simple, configurable auto clicker"
requires-python = ">=3.11"
dependencies = [
    "pynput>=1.7",
]

[project.scripts]
autoclicker = "autoclicker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
